test/e2e/pass/002-arithmatic/input.tjs
let x = (2 + 2 * 3) - 1;
let y = 2 * x;
print(x);
print(y);
