test/e2e/fail/010-type-arity-lambda/input.tjs
let id = (n) => n;
id(1, 3);
